# n3rv

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVANGELION.md  Home.md  README.md  SECURITY.md  mcp.json  opencode.json  pyproject.toml
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  init-wiki.yml  publish.yml  stale.yml  test-pr-trigger.yml
.nerv/: a2a-config.yaml  skill-registry.md
.nerv/memory/: chroma.sqlite3  relations.db
.nerv/systemd/: n3rv-hub.service
.opencode/: package.json
.opencode/agents/: git-ops.md  github-ops.md  n3rverberage.md  sdd-archiver.md  sdd-designer.md  sdd-explorer.md  sdd-proposer.md  sdd-speccer.md  sdd-task-planner.md  sdd-verifier.md
.opencode/commands/: handoff.md  judgment-day.md  review.md  sdd-new.md
.opencode/plugins/: n3rv-lifecycle.js  n3rv-shell-env.js  n3rverberage-lifecycle.js  n3rverberage-shell-env.js  nerv-shell-env.js
.opencode/scripts/: github-mcp-wrapper.sh
.opencode/skills/code/: SKILL.md
.opencode/skills/git-ops/: SKILL.md
.opencode/skills/github-ops/: SKILL.md
.opencode/skills/testing/: SKILL.md
.opencode/tools/: n3rv-stats.ts  n3rverberage-stats.ts  nerv-stats.ts
docs/: ARCHITECTURE.md  CNAME  DEPLOYMENT.md  MCP-TOOLS.md  SDD-WORKFLOW.md  index.html
src/n3rv/: cli.py  cli_org.py  org.py
src/n3rv/a2a/: agent_cards.py
src/n3rv/init/: __init__.py  context.py  registry.py  renderer.py  update.py  writer.py
src/n3rv/init/templates/: opencode.json.j2
src/n3rv/init/templates/n3rv/systemd/: n3rv-hub.service.j2
src/n3rv/init/templates/opencode/: package.json.j2
src/n3rv/init/templates/opencode/commands/: new-satellite.md.j2
src/n3rv/init/templates/opencode/tools/: n3rv-stats.ts.j2
src/n3rverberage/: cli.py  cli_memory.py  cli_org.py  config.py  daemon.py  org.py  platform.py  util.py
src/n3rverberage/a2a/: __init__.py  agent_cards.py  hub.py  router.py  state.py
src/n3rverberage/init/: __init__.py  context.py  detector.py  lockfile.py  registry.py  renderer.py  update.py  writer.py
src/n3rverberage/init/analyzer/: __init__.py  frameworks.py  mappings.py  mcp_recommender.py  profile.py  structure.py  tools.py
src/n3rverberage/init/templates/: context.json  opencode.json.j2
src/n3rverberage/init/templates/n3rverberage/systemd/: n3rverberage-hub.service.j2
src/n3rverberage/init/templates/opencode/: agents.md.j2  package.json.j2
src/n3rverberage/init/templates/opencode/agents/: n3rverberage.md.j2  project-ops.md.j2  sdd-archiver.md.j2  sdd-task-planner.md.j2
src/n3rverberage/init/templates/opencode/commands/: handoff.md.j2  judgment-day.md.j2  lint.md.j2  new-satellite.md.j2  review.md.j2  sdd-new.md.j2  test.md.j2  typecheck.md.j2
src/n3rverberage/init/templates/opencode/plugins/: n3rverberage-lifecycle.js.j2  n3rverberage-shell-env.js.j2
src/n3rverberage/init/templates/opencode/tools/: n3rverberage-stats.ts.j2
src/n3rverberage/mcp/: __init__.py  client.py  hub_server.py  memory_server.py  memory_service.py  relation_store.py  session_manager.py  shared.py  vector_store.py
src/n3rverberage/providers/: factory.py  local.py  models.py  openai.py  qwen.py  tts_fallback.py
src/nerv/: cli.py  cli_memory.py  config.py  platform.py
src/nerv/a2a/: agent_cards.py  hub.py  router.py  state.py
src/nerv/init/: __init__.py  context.py  detector.py  registry.py  renderer.py  update.py  writer.py
src/nerv/init/analyzer/: frameworks.py
src/nerv/init/templates/: mcp.json.j2  opencode.json.j2
src/nerv/init/templates/agents/: AGENTS.md.j2
src/nerv/init/templates/opencode/: AGENTS.md.j2  package.json.j2
src/nerv/mcp/: client.py  hub_server.py  memory_server.py  memory_service.py  memory_store.py  relation_store.py  session_manager.py  shared.py  vector_store.py
tests/: conftest.py  test_config.py
tests/a2a/: test_agent_cards.py  test_hub.py  test_hub_recovery.py  test_hub_sse.py  test_hub_sse_format.py  test_state_list_tasks.py  test_state_subscribe.py
tests/cli/: test_cli_memory.py
tests/init/: __init__.py  conftest.py  test_cli_init.py  test_cli_update.py  test_context.py  test_context_validation.py  test_detector.py  test_init.py  test_init_orchestrator.py  test_lockfile.py  test_registry.py  test_renderer.py  test_updater.py  test_writer.py
tests/init/analyzer/: test_frameworks.py  test_mcp_recommender.py  test_structure.py  test_tools.py
tests/mcp/: test_hub_server.py  test_memory_server.py
tests/org/: test_cli_org.py  test_integration.py  test_org_config.py
tests/plugins/: test_lifecycle_plugin.py
tests/providers/: conftest.py  test_base.py  test_factory.py  test_local.py  test_models.py  test_openai.py  test_qwen.py  test_tts_fallback.py
tests/tools/: test_n3rv_stats.py  test_n3rverberage_stats.py  test_nerv_stats.py
(+36 files in other folders)
