[project]
name = "n3rv"
version = "0.1.0"
description = "Invisible engineering infrastructure for opencode agents."
readme = "README.md"
license = { text = "GPL-2.0" }
authors = [{ name = "Juan Manuel Daza", email = "juanmanueldaza@gmail.com" }]
requires-python = ">=3.14"
keywords = ["opencode", "agent", "infrastructure", "mcp", "memory", "hub"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.13.5",
    "chromadb>=1.5.9",
    "onnxruntime>=1.26.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "mcp>=1.27.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rank-bm25>=0.2.2",
    "typer>=0.25.1",
    "watchdog>=6.0.0",
]

[project.scripts]
n3rv = "n3rv.cli:main"
n3rv-memory = "n3rv.mcp.memory_server:main"
n3rv-hub = "n3rv.mcp.hub_server:main"

[project.urls]
Homepage = "https://n3rv.daza.ar"
Repository = "https://github.com/juanmanueldaza/n3rv"
"Bug Tracker" = "https://github.com/juanmanueldaza/n3rv/issues"
"Changelog" = "https://github.com/juanmanueldaza/n3rv/releases"

[build-system]
requires = ["uv_build>=0.8.11,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["B008", "N806", "N814"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
