[project]
name = "n3rv"
version = "0.1.0"
description = "Invisible engineering infrastructure for opencode agents — reverberage fork."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Juan Manuel Daza", email = "juan@daza.ar" },
    { name = "reverberage", email = "dev@reverberage.org" },
]
requires-python = ">=3.11"
keywords = ["opencode", "agent", "infrastructure", "mcp", "memory", "hub", "reverberage"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.13.5",
    "chromadb>=1.5.9",
    "onnxruntime>=1.26.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "mcp>=1.27.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rank-bm25>=0.2.2",
    "typer>=0.25.1",
    "watchdog>=6.0.0",
]

[project.scripts]
n3rv = "n3rv.cli:main"
n3rv-memory = "n3rv.mcp.memory_server:main"
n3rv-hub = "n3rv.mcp.hub_server:main"

[project.urls]
Homepage = "https://github.com/reverberage/n3rv"
Repository = "https://github.com/reverberage/n3rv"
"Bug Tracker" = "https://github.com/reverberage/n3rv/issues"
"Changelog" = "https://github.com/reverberage/n3rv/releases"

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/n3rv"]

[tool.hatch.build.targets.sdist]
include = ["/src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["B008", "N806", "N814"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
